# utils

./: custom_vscode.css  profile.ps1
cpp/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json
cpp/shared/: compile_definitions.cmake  compile_options.cmake  pch.cmake  prelude.hpp
cpp/src/: main.cpp
